docs/pages/versions/v56.0.0/sdk/ui/index.mdx
---
title: Expo UI
sidebar_title: 概览
description: 一组组件，可让你直接使用 Jetpack Compose 和 SwiftUI 从 React 构建 UI。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'ios', 'tvos', 'expo-go']
---

`@expo/ui` 是一组原生输入组件，允许你使用 Jetpack Compose 和 SwiftUI 构建完全原生的界面。它旨在提供典型应用所需的常用功能和组件。

## 可用平台

组件适用于以下平台：

- **[Jetpack Compose](jetpack-compose)**：使用 Jetpack Compose 组件构建原生 Android 界面
- **[SwiftUI](swift-ui)**：使用 SwiftUI 组件构建原生 iOS 界面
- **[Universal](universal)**：跨平台组件，使用单一源代码即可在 Android、iOS 和 web 上运行。

## 直接替换

参见 **[即插即用替换](drop-in-replacements)**，了解与 API 兼容的热门 React Native 社区库替代方案。

## 可用组件

{/* @generated:ui-component-table. Do not edit by hand. Run `pnpm generate-ui-component-tables`. */}

### 直接替换

| 组件                                                   | 描述                                                                            |
| ----------------------------------------------------------- | -------------------------------------------------------------------------------------- |
| [`BottomSheet`](drop-in-replacements/bottomsheet)           | 与 @gorhom/bottom-sheet 兼容的底部弹出面板。                                   |
| [`DateTimePicker`](drop-in-replacements/datetimepicker)     | 与 @react-native-community/datetimepicker 兼容的日期和时间选择器。         |
| [`MaskedView`](drop-in-replacements/maskedview)             | 与 @react-native-masked-view/masked-view 兼容的遮罩视图。                   |
| [`Menu`](drop-in-replacements/menu)                         | 与 @react-native-menu/menu 兼容的菜单。                                        |
| [`PagerView`](drop-in-replacements/pagerview)               | 与 react-native-pager-view 兼容的横向分页视图。                     |
| [`Picker`](drop-in-replacements/picker)                     | 与 @react-native-picker/picker 兼容的选择器。                                  |
| [`SegmentedControl`](drop-in-replacements/segmentedcontrol) | 与 @react-native-segmented-control/segmented-control 兼容的分段控制。 |
| [`Slider`](drop-in-replacements/slider)                     | 与 @react-native-community/slider 兼容的滑块。                               |

### 通用

| 组件                              | 描述                                                                                               |
| -------------------------------------- | --------------------------------------------------------------------------------------------------------- |
| [`BottomSheet`](universal/bottomsheet) | 从屏幕底部滑出的模态面板。                                               |
| [`Button`](universal/button)           | 带有多种视觉变体的可按压按钮。                                                         |
| [`Checkbox`](universal/checkbox)       | 表示选中或未选中状态的切换控件。                                            |
| [`Collapsible`](universal/collapsible) | 带标签的可点击标题，用于切换其内容的显示与隐藏。                                        |
| [`Column`](universal/column)           | 用于通用 @expo/ui 组件的垂直布局容器。                                            |
| [`FieldGroup`](universal/fieldgroup)   | 可滚动的分组设置样式行容器。                                                    |
| [`Host`](universal/host)               | 跨平台 Host 组件，用于包装通用 @expo/ui 内容。                                    |
| [`Icon`](universal/icon)               | 平台原生图标——iOS 上为 SF Symbol，Android 上为 Material Symbol。                                    |
| [`List`](universal/list)               | 与可点击的 ListItem 基元配对的虚拟化垂直行容器。                      |
| [`Picker`](universal/picker)           | 具有菜单和滚轮外观的单选输入。                                                 |
| [`RNHostView`](universal/rnhostview)   | 用于在 @expo/ui 视图中承载 React Native 视图的跨平台组件。                          |
| [`Row`](universal/row)                 | 用于通用 @expo/ui 组件的水平布局容器。                                          |
| [`ScrollView`](universal/scrollview)   | 支持垂直或水平滚动的可滚动容器。                                    |
| [`Slider`](universal/slider)           | 用于从连续或分段范围中选择值的控件。                                       |
| [`Spacer`](universal/spacer)           | 用于在相邻元素之间产生空白的布局间隔器。                                               |
| [`Switch`](universal/switch)           | 在开启和关闭状态之间切换的切换控件。                                                 |
| [`Text`](universal/text)               | 用于显示带样式文本内容的组件。                                                           |
| [`TextInput`](universal/textinput)     | 由原生 SwiftUI 和 Jetpack Compose 组件提供支持的文本输入，具有与 React Native 兼容的 API。 |

### Jetpack Compose

| 组件                                                                     | 描述                                                                                                             |
| ------------------------------------------------------------------------ | ---------------------------------------------------------------------------------------------------------------- |
| [`AlertDialog`](jetpack-compose/alertdialog)                             | 用于显示原生警告对话框的 AlertDialog 组件。                                                                       |
| [`Badge`](jetpack-compose/badge)                                         | 用于显示状态指示器和计数的 Badge 组件。                                                                           |
| [`BadgedBox`](jetpack-compose/badgedbox)                                 | 用于在内容上叠加徽章的 BadgedBox 组件。                                                                            |
| [`BasicAlertDialog`](jetpack-compose/basicalertdialog)                   | 用于显示自定义内容对话框的 BasicAlertDialog 组件。                                                                  |
| [`Box`](jetpack-compose/box)                                             | 用于堆叠子元素的 Box 组件。                                                                                       |
| [`Button`](jetpack-compose/button)                                       | 用于显示原生 Material3 按钮的 Button 组件。                                                                        |
| [`Card`](jetpack-compose/card)                                           | 用于在带样式容器中显示内容的 Card 组件。                                                                           |
| [`Carousel`](jetpack-compose/carousel)                                   | 用于显示可滚动项目集合的 Carousel 组件。                                                                          |
| [`Checkbox`](jetpack-compose/checkbox)                                   | 用于选择控件的 Checkbox 组件。                                                                                    |
| [`Chip`](jetpack-compose/chip)                                           | 用于显示紧凑元素的 Chip 组件。                                                                                    |
| [`Column`](jetpack-compose/column)                                       | 用于垂直放置子元素的 Column 组件。                                                                                |
| [`DateTimePicker`](jetpack-compose/datetimepicker)                       | 用于选择日期和时间的 DateTimePicker 组件。                                                                        |
| [`Divider`](jetpack-compose/divider)                                     | 用于创建视觉分隔线的 Divider 组件。                                                                               |
| [`DockedSearchBar`](jetpack-compose/dockedsearchbar)                     | 用于显示内嵌搜索输入框的 DockedSearchBar 组件。                                                                    |
| [`DropdownMenu`](jetpack-compose/dropdownmenu)                           | 用于显示下拉菜单的 DropdownMenu 组件。                                                                            |
| [`ExposedDropdownMenuBox`](jetpack-compose/exposeddropdownmenubox)       | 用于显示带有可自定义锚点的下拉菜单的 ExposedDropdownMenuBox 组件。                                                   |
| [`FloatingActionButton`](jetpack-compose/floatingactionbutton)           | 遵循 Material Design 3 的 FloatingActionButton 组件。                                                             |
| [`FlowRow`](jetpack-compose/flowrow)                                     | 用于水平排列并换行显示子元素的 FlowRow 组件。                                                                     |
| [`HorizontalFloatingToolbar`](jetpack-compose/horizontalfloatingtoolbar) | 用于显示浮动操作栏的 HorizontalFloatingToolbar 组件。                                                             |
| [`HorizontalPager`](jetpack-compose/horizontalpager)                     | 用于实现可滑动页面的 HorizontalPager 组件。                                                                       |
| [`Host`](jetpack-compose/host)                                           | 用于桥接 React Native 和 Jetpack Compose 的 Host 组件。                                                            |
| [`Icon`](jetpack-compose/icon)                                           | 用于显示图标的 Icon 组件。                                                                                        |
| [`IconButton`](jetpack-compose/iconbutton)                               | 用于显示原生 Material3 图标按钮的 IconButton 组件。                                                               |
| [`LazyColumn`](jetpack-compose/lazycolumn)                               | 用于显示可滚动列表的 LazyColumn 组件。                                                                            |
| [`LazyRow`](jetpack-compose/lazyrow)                                     | 用于显示水平滚动列表的 LazyRow 组件。                                                                             |
| [`ListItem`](jetpack-compose/listitem)                                   | 用于显示结构化列表项的 ListItem 组件。                                                                            |
| [`ModalBottomSheet`](jetpack-compose/bottomsheet)                        | 从屏幕底部呈现内容的 ModalBottomSheet 组件。                                                                      |
| [`NavigationBar`](jetpack-compose/navigationbar)                         | 用于 Material 3 底部导航的 NavigationBar 组件。                                                                   |
| [`Progress Indicators`](jetpack-compose/progress)                        | 用于显示操作状态的进度指示器组件。                                                                                |
| [`PullToRefreshBox`](jetpack-compose/pulltorefreshbox)                   | 用于下拉刷新交互的 PullToRefreshBox 组件。                                                                        |
| [`RadioButton`](jetpack-compose/radiobutton)                             | 用于单选控件的 RadioButton 组件。                                                                                  |
| [`RNHostView`](jetpack-compose/rnhostview)                               | 用于在 Jetpack Compose 中嵌入 React Native 视图的组件。                                                            |
| [`Row`](jetpack-compose/row)                                             | 用于水平放置子元素的 Row 组件。                                                                                    |
| [`SearchBar`](jetpack-compose/searchbar)                                 | 用于实现搜索输入功能的 SearchBar 组件。                                                                           |
| [`SegmentedButton`](jetpack-compose/segmentedbutton)                     | 用于单选或多选的分段按钮组件。                                                                                    |
| [`Shape`](jetpack-compose/shape)                                         | 用于绘制几何形状的 Shape 组件。                                                                                    |
| [`Slider`](jetpack-compose/slider)                                       | 用于从一定范围内选择值的 Slider 组件。                                                                            |
| [`Snackbar`](jetpack-compose/snackbar)                                   | 一种简短的通知，显示在屏幕底部，用于提供反馈且不会打断用户。 |
| [`Spacer`](jetpack-compose/spacer)                                       | 用于在元素之间添加灵活间距的间隔器组件。                                                     |
| [`Surface`](jetpack-compose/surface)                                     | 用于有样式内容容器的 Surface 组件。                                                                 |
| [`Switch`](jetpack-compose/switch)                                       | 用于切换控件的 Switch 组件。                                                                            |
| [`Text`](jetpack-compose/text)                                           | 用于显示带样式文本的 Text 组件。                                                                       |
| [`TextField`](jetpack-compose/textfield)                                 | 原生 Material3 文本输入的 TextField 组件。                                                            |
| [`ToggleButton`](jetpack-compose/togglebutton)                           | 用于显示原生 Material3 切换按钮的 ToggleButton 组件。                                          |
| [`Tooltip`](jetpack-compose/tooltip)                                     | 用于在长按时显示上下文信息的 Tooltip 组件。                                          |

### SwiftUI

| 组件                                                              | 描述                                                                                         |
| ----------------------------------------------------------------- | -------------------------------------------------------------------------------------------- |
| [`AccessoryWidgetBackground`](swift-ui/accessorywidgetbackground) | 根据小组件环境提供标准外观的自适应背景视图。                                                 |
| [`Alert`](swift-ui/alert)                                         | 用于呈现原生 iOS 警告对话框的警告组件。                                                       |
| [`BottomSheet`](swift-ui/bottomsheet)                             | 从屏幕底部呈现内容的 BottomSheet 组件。                                                       |
| [`Button`](swift-ui/button)                                       | 用于显示原生按钮的按钮组件。                                                                 |
| [`ColorPicker`](swift-ui/colorpicker)                             | 用于选择颜色的 ColorPicker 组件。                                                             |
| [`ConfirmationDialog`](swift-ui/confirmationdialog)               | 用于呈现确认提示的 ConfirmationDialog 组件。                                                   |
| [`ContextMenu`](swift-ui/contextmenu)                             | 用于显示上下文菜单的 ContextMenu 组件。                                                       |
| [`ControlGroup`](swift-ui/controlgroup)                           | 用于将交互控件分组的 ControlGroup 组件。                                                       |
| [`DatePicker`](swift-ui/datepicker)                               | 用于选择日期和时间的 DatePicker 组件。                                                         |
| [`DisclosureGroup`](swift-ui/disclosuregroup)                     | 用于显示可展开内容的 DisclosureGroup 组件。                                                    |
| [`Divider`](swift-ui/divider)                                     | 用于创建视觉分隔线的 Divider 组件。                                                           |
| [`Form`](swift-ui/form)                                           | 用于在结构化布局中收集用户输入的 Form 组件。                                                   |
| [`Gauge`](swift-ui/gauge)                                         | 用于通过视觉指示器显示进度的 Gauge 组件。                                                     |
| [`Group`](swift-ui/group)                                         | 用于对视图进行分组且不影响布局的 Group 组件。                                                  |
| [`Host`](swift-ui/host)                                           | 用于在 React Native 中启用 SwiftUI 组件的 Host 组件。                                          |
| [`HStack`](swift-ui/hstack)                                       | 用于水平布局的 HStack 组件。                                                                  |
| [`Image`](swift-ui/image)                                         | 用于显示 SF Symbols 的 Image 组件。                                                           |
| [`Label`](swift-ui/label)                                         | 用于显示带图标文本的 Label 组件。                                                             |
| [`LazyHStack`](swift-ui/lazyhstack)                               | 用于延迟加载水平布局的 LazyHStack 组件。                                                       |
| [`LazyVStack`](swift-ui/lazyvstack)                               | 用于延迟加载垂直布局的 LazyVStack 组件。                                                       |
| [`Link`](swift-ui/link)                                           | 用于显示可点击链接的 Link 组件。                                                              |
| [`List`](swift-ui/list)                                           | 用于显示可滚动项目列表的 List 组件。                                                          |
| [`Menu`](swift-ui/menu)                                           | 用于显示下拉菜单的 Menu 组件。                                                                |
| [`Namespace`](swift-ui/namespace)                                 | 允许你在 SwiftUI 中创建命名空间的 Namespace 组件。                                            |
| [`Overlay`](swift-ui/overlay)                                     | 用于将内容叠加到其他视图之上的 Overlay 组件。                                                  |
| [`Picker`](swift-ui/picker)                                       | 用于从列表中选择选项的 Picker 组件。                                                          |
| [`Popover`](swift-ui/popover)                                     | 用于在浮动叠加层中显示内容的 Popover 组件。                                                    |
| [`ProgressView`](swift-ui/progressview)                           | 用于显示进度指示器的 ProgressView 组件。                                                       |
| [`RNHostView`](swift-ui/rnhostview)                               | 用于在 SwiftUI 中启用 React Native 视图的组件。                                                |
| [`ScrollView`](swift-ui/scrollview)                               | 用于显示可滚动内容的 ScrollView 组件。                                                         |
| [`Section`](swift-ui/section)                                     | 用于在列表和表单中对内容进行分组的 Section 组件。                                              |
| [`SecureField`](swift-ui/securefield)                             | 用于输入密码的 SecureField 组件。                                                             |
| [`Slider`](swift-ui/slider)                                       | 用于从一定范围内选择值的 Slider 组件。                                                         |
| [`Spacer`](swift-ui/spacer)                                       | 用于提供灵活间距的 Spacer 组件。                                                              |
| [`SwipeActions`](swift-ui/swipeactions)                           | 用于向行内容添加前导和尾随滑动操作的 SwipeActions 组件。                                       |
| [`TabView`](swift-ui/tabview)                                     | 用于分页或选项卡式内容的 TabView 组件。                                                        |
| [`Text`](swift-ui/text)                                           | 用于显示样式化文本并支持嵌套文本的 Text 组件。                                                 |
| [`TextField`](swift-ui/textfield)                                 | 用于文本输入的 TextField 组件。                                                               |
| [`Toggle`](swift-ui/toggle)                                       | 用于显示原生切换开关的 Toggle 组件。                                                           |
| [`VStack`](swift-ui/vstack)                                       | 用于垂直布局的 VStack 组件。                                                                  |
| [`ZStack`](swift-ui/zstack)                                       | 用于重叠布局的 ZStack 组件。                                                                  |

{/* @generated:ui-component-table:end */}
